fix: code font scaling on ios

--- a/assets/scss/partials/components/_post.scss
+++ b/assets/scss/partials/components/_post.scss
@@ -181,6 +181,11 @@
       display: block;
     }
 
+    /* Prevent ios font scaling issue */
+    .chroma * {
+      -webkit-text-size-adjust: none;
+    }
+
     .upper {
       text-transform: uppercase;
     }
